# c-x

./: .clang-format  .gitignore  CMakeLists.txt  KV_SERVER_README.md  Makefile  README.md  start_server.sh  stop_server.sh  test_all_endpoints.sh  test_browser_simulation.sh  test_cors_and_hosts.sh  test_dynamic_port.sh  test_kv_server.sh  test_verbose.sh
.github/workflows/: build.yml  code-quality.yml
build-test/: CTestTestfile.cmake  Makefile  c_x
build-test/Testing/Temporary/: CTestCostData.txt
build-test/tests/: CTestTestfile.cmake  Makefile  test_c_x
include/: c_x.h  http_parser.h  kqueue_net.h  kv_store.h  version.h.in
src/: c_x.c  http_parser.c  kqueue_net.c  kv_store.c  kv_store_backup.c  kv_store_temp.c  main.c
tests/: CMakeLists.txt  test_c_x.c
web/: index.html
